Refactor List.of()